Fix sidebar overflow

--- a/src/root/components/RiskImminentEventMap/GDACSEventMap/Sidebar/styles.module.scss
+++ b/src/root/components/RiskImminentEventMap/GDACSEventMap/Sidebar/styles.module.scss
@@ -1,6 +1,8 @@
 @import '~styles/settings/variables';
 
 .sidebar {
+  --overflow: auto;
+
   .event-list {
     padding: 0 $spacing*0.5!important;
     margin: $spacing*0.5 0;
